OCA-50 Removed unnecessary /api/v1/auth/register endpoint and updated customer's forgot password and reset password endpoints according to requirement
